--- a/dailywalk/static/css/home.css
+++ b/dailywalk/static/css/home.css
@@ -1,4 +1,47 @@
-h1 {
-    text-align: center;
-    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+.page-header {
+    background-color: #ff9400;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px;
+}
+
+.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+    color: #ffffff;
+    font-size: 36pt;
+    text-decoration: none;
+}
+
+.content {
+    margin-left: 40px;
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Lobster', cursive;
+}
+
+.date {
+    float: right;
+    color: #828282;
+}
+
+.save {
+    float: right;
+}
+
+.blog-form textarea, .blog-form input {
+    width: 100%;
+}
+
+.top-menu, .top-menu:hover, .top-menu:visited {
+    color: #ffffff;
+    float: right;
+    font-size: 26pt;
+    margin-right: 20px;
+}
+
+.blog {
+    margin-bottom: 70px;
+}
+
+.blog h1 a, .blog h1 a:visited {
+    color: #000000;
 }
